unpackaged/main/default/objects/AAA_Insurance_Policy_Coverage__c/AAA_Insurance_Policy_Coverage__c.object-meta.xml
<CustomObject>
    <label>AAA Insurance Policy Coverage</label>
    <nameField>
        <label>AAA Insurance Policy Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AAA Insurance Policy Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>