unpackaged/main/default/objects/AAA_Insurance_Policy_Coverage__c/fields/AAA_Insurance__c.field-meta.xml
<CustomField>
    <fullName>AAA_Insurance__c</fullName>
    <label>AAA Insurance</label>
    <referenceTo>AAA_Insurance__c</referenceTo>
    <relationshipLabel>AAA Insurance Policy Coverages</relationshipLabel>
    <relationshipName>AAA_Insurance_Policy_Coverages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>