unpackaged/main/default/objects/AAA_Insurance_Policy_Coverage__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coverage</fullName>
                <default>true</default>
                <label>Coverage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>