unpackaged/main/default/objects/AAA_Insurance_Policy_Coverage__c/fields/Category_Group__c.field-meta.xml
<CustomField>
    <fullName>Category_Group__c</fullName>
    <label>Category Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Care, Custody and Control Coverage</fullName>
            </value>
            <value>
                <fullName>Garage Keepers</fullName>
            </value>
            <value>
                <fullName>General Liability</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>On Hook</fullName>
            </value>
            <value>
                <fullName>Umbrella</fullName>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>