unpackaged/main/default/objects/AAA_Insurance_Policy_Coverage__c/fields/Category_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Group_Type__c</fullName>
    <label>Category Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bodily Injury</fullName>
            </value>
            <value>
                <fullName>Collision</fullName>
            </value>
            <value>
                <fullName>Comprehensive</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Medical Payments</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Property Damage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>